# devSpin

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json
.github/workflows/: rust.yml
devspin-cli/: Cargo.toml  Dockerfile  Makefile  build-docker.sh
devspin-cli/src/: error.rs  lib.rs  main.rs  prelude.rs
devspin-cli/src/cli/: config.rs  init.rs  mod.rs  test_cmd.rs
devspin-cli/src/parser/: PARSER.md  devspin_generator.rs  mod.rs
devspin-cli/src/utils/: UTILS.md  create_devspin_file.rs  devspin_finder.pseudo  devspin_finder.rs  mod.rs  root_finder.rs
devspin-cli/tests/: hello_test.rs
devspin-cli/tests/parser_tests/: devspin_generator_test.rs
devspin-cli/tests/utils_tests/: create_devspin_file_test.rs  devspin_finder_test.rs  root_finder_test.rs
devspin-interpretor/: .sample.yaml  SYNTAX.md  custom_target.sptow  outputted.docker.sptow  skip2.md
devspin-interpretor/spn-demo/: .dockerignore  Dockerfile  build-docker.sh  spn-demo.spn
landing-web-page/: package-lock.json  package.json
landing-web-page/src/app/: globals.scss
lintRunner/: Dockerfile  build-docker.sh  main.v
lintRunner/config_analyzer/: detect_typ_project.v
lintRunner/executor/: auto_mode_command_runner.v  color_utils.v  executor.v  semiauto_mode_command_runner.v
lintRunner/tests/: config_analyzer_test.v  executor_test.v
spin-docs/: docusaurus.config.js
spin-docs/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
spin-docs/docs/: concepts.md  index.md  quickstart.md
spin-docs/public/: index.html  start.html
(+12 files in other folders)
