[package]
name = "devspin-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = "1.0.228"
anyhow = "1.0"
colored = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.2"
assert_cmd = "2.0"
predicates = "3.0"
