[package]
name = "devspin-cli"
version = "0.1.0"
edition = "2021"
description = "Development environment manager CLI"
license = "MIT"
repository = "https://github.com/m-epasta/devSpin"
authors = ["m-epasta"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = "1.0.228"
anyhow = "1.0"
colored = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.0"
rayon = "1.7"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.2"
assert_cmd = "2.0"
predicates = "3.0"

[[test]]
name = "hello_test"
path = "tests/hello_test.rs"

[[test]]
name = "utils_devspin_finder_test"
path = "tests/utils_tests/devspin_finder_test.rs"
